# analgin

./: README.md  pyproject.toml
analgin/: __init__.py
analgin/amqp/consumer/: __init__.py  abc.py  base.py  failed.py  requeue.py
analgin/amqp/publisher/: __init__.py  abc.py  base.py
analgin/log/: __init__.py  abc.py  base.py
analgin/notification/: __init__.py  email.py
