[project]
name = "analgin"
version = "1.2.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ada-lave", email = "mega.kefi36@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
]

[project.scripts]
analgin = "analgin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
